--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
