--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-select": "^5.2.2",
     "react-simple-maps": "^2.3.0",
     "react-tooltip": "^4.2.21",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
