--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "countries",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://devdeb91.github.io/countries/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b develop -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
